# wakaama

core/: acl.c  block1-stream.c  block1.c  block2-stream.c  bootstrap.c  data.c  internals.h  liblwm2m.c  liblwm2m.h  management.c  objects.c  observe.c  packet.c  registration.c  tlv.c  transaction.c  uri.c  utils.c  wakaama.cmake
core/er-coap-13/: er-coap-13.c  er-coap-13.h
examples/client/: lwm2mclient.c
examples/shared/: connection.c  dtlsconnection.c  tinydtls.cmake
tests/: CMakeLists.txt  block1streamtests.c  block2streamtests.c  coaptests.c  stub.c  tests.h  unittests.c
